--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,8 +8,7 @@
 	<h3 align="center">
 			Login<br> <br>
 		</h3>
-
-		<form action="getdetails" method="post">
+		<form action="member-accout" method="post">
 			<h3 align="center">
 				Email: <input type="text" name="email" /><br> <br>
 				Password: <input type="text" name="password" /> <input type="submit" /><br> If you don't have account?<a
